spec house scaffold

--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -18,27 +18,37 @@
 
   <div class="field">
     <%= form.label :cep %>
-    <%= form.text_field :cep %>
+    <%= form.number_field :cep %>
   </div>
 
   <div class="field">
     <%= form.label :size %>
-    <%= form.text_field :size %>
+    <%= form.number_field :size %>
   </div>
 
   <div class="field">
     <%= form.label :rooms %>
-    <%= form.text_field :rooms %>
+    <%= form.number_field :rooms %>
   </div>
 
   <div class="field">
     <%= form.label :bathrooms %>
-    <%= form.text_field :bathrooms %>
+    <%= form.number_field :bathrooms %>
   </div>
 
   <div class="field">
     <%= form.label :parking %>
-    <%= form.text_field :parking %>
+    <%= form.number_field :parking %>
+  </div>
+
+  <div class="field">
+    <%= form.label :sell %>
+    <%= form.text_field :sell %>
+  </div>
+
+  <div class="field">
+    <%= form.label :rent %>
+    <%= form.text_field :rent %>
   </div>
 
   <div class="actions">
