--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -17,6 +17,12 @@
   </div>
 
   <div class="field">
+    <%= form.label :city %>
+    <%= form.text_field :city %>
+  </div>
+
+
+  <div class="field">
     <%= form.label :cep %>
     <%= form.number_field :cep %>
   </div>
