--- a/app/views/shared/site/_footer.html.erb
+++ b/app/views/shared/site/_footer.html.erb
@@ -1,10 +1,12 @@
 <!-- Footer section -->
+
 <footer class="footer-section set-bg" data-setbg="<%= image_url("footer-bg.jpg") %>">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 footer-widget">
                 <img src="img/logo.png" alt="">
                 <p>Lorem ipsum dolo sit azmet, consecter dipise consult  elit. Maecenas mamus antesme non anean a dolor sample tempor nuncest erat.</p>
+
                 <div class="social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -13,6 +15,7 @@
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
+
             <div class="col-lg-3 col-md-6 footer-widget">
                 <div class="contact-widget">
                     <h5 class="fw-title">CONTACT US</h5>
@@ -21,30 +24,26 @@
                     <p><i class="fa fa-envelope"></i>info.leramiz@colorlib.com</p>
                     <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p>
                 </div>
+
             </div>
+
             <div class="col-lg-3 col-md-6 footer-widget">
                 <div class="double-menu-widget">
                     <h5 class="fw-title">POPULAR PLACES</h5>
                     <ul>
-                        <li><a href="">Florida</a></li>
-                        <li><a href="">New York</a></li>
-                        <li><a href="">Washington</a></li>
-                        <li><a href="">Los Angeles</a></li>
-                        <li><a href="">Chicago</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="">St Louis</a></li>
-                        <li><a href="">Jacksonville</a></li>
-                        <li><a href="">San Jose</a></li>
-                        <li><a href="">San Diego</a></li>
-                        <li><a href="">Houston</a></li>
+                        <li>
+                            <% @houses_premium.each do |p| %>
+                                <%= link_to p.address %>
+                            <% end %>
+                        </li>
                     </ul>
                 </div>
             </div>
+
             <div class="col-lg-3 col-md-6  footer-widget">
                 <div class="newslatter-widget">
                     <h5 class="fw-title">NEWSLETTER</h5>
-                    <p>Subscribe your email to get the latest news and new offer also discount</p>
+                    <p>Insira seu email e receba informações de novas casas para alugar e/ou vender</p>
                     <form class="footer-newslatter-form">
                         <input type="text" placeholder="Email address">
                         <button><i class="fa fa-send"></i></button>
@@ -52,6 +51,7 @@
                 </div>
             </div>
         </div>
+
         <div class="footer-bottom">
             <div class="footer-nav">
                 <ul>
@@ -63,6 +63,7 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
+
             <div class="copyright">
                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -71,5 +72,7 @@
         </div>
     </div>
 </footer>
+
 <!-- Footer section end -->
+
 
